--- a/public_html/gitCommands.html
+++ b/public_html/gitCommands.html
@@ -5,9 +5,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Git Commands</title>
+    <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
+    
+    <div id="header">
+        <a href="index.html"><h1>IS218 Project</h1></a>
+    </div>
+    <div id="navi">
+        <ul id="navimenu">
+            <li><a href="gitCommands.html">Git</a></li>
+            <li><a href="linuxCommands.html">Linux</a></li>
+            <li><a href="viCommands.html">VI Editor</a></li>
+            <li><a href = "dockerCommands.html">Docker</a></li>
+            <li><a href = "apache.html">Apache</a></li>
+        </ul>
+    </div>
     
     <div class = "header">Git Commands
         <div class = "subheader">With Examples</div>
