--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,7 +18,7 @@
             <li><a href="linuxCommands.html">Linux</a></li>
             <li><a href="viCommands.html">VI Editor</a></li>
             <li><a href = "dockerCommands.html">Docker</a></li>
-            <li><a href = "apache.html">Apache</a></li>
+            <li><a href = "apacheCommands.html">Apache</a></li>
         </ul>
     </div>
 
