--- a/public_html/apacheCommands.html
+++ b/public_html/apacheCommands.html
@@ -19,7 +19,7 @@
             <li><a href="linuxCommands.html">Linux</a></li>
             <li><a href="viCommands.html">VI Editor</a></li>
             <li><a href = "dockerCommands.html">Docker</a></li>
-            <li><a href = "apache.html">Apache</a></li>
+            <li><a href = "apacheCommands.html">Apache</a></li>
         </ul>
     </div>
     <div id="content">
