--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,4 +22,8 @@
         </ul>
     </div>
 
+    <div id="content">
+        <h2>This is project 1 made my Mohit Joshi and Omar Elserty.  with us as the contributors, we divided our tasks into issues then we assigned those issues to our selves. We then It consists of different HTML files that consists of different commands of what we have used such as apache, docker, linux, git, and vi. We then have created a separate branch for each upload which later on merged onto the main branch through pull requests.</h2>   
+    </div>
+
 </body>
