--- a/public_html/gitCommands.html
+++ b/public_html/gitCommands.html
@@ -45,7 +45,7 @@
         </div>
         <li>git commit -m ""</li>
         <div class = "description"><p> Commit is another word for Snapshot. The git commit command is used for taking a screenshot of the current directory.</p>
-            <img src = "./images/git commit.png">
+            <img src = "./images/gitCommit.png">
             <p>Notice that it needs a message between the quotations</p>
         </div>
         <li>git checkout (-b)</li>
