--- a/public_html/apacheCommands.html
+++ b/public_html/apacheCommands.html
@@ -20,6 +20,11 @@
             <li><a href="viCommands.html">VI Editor</a></li>
             <li><a href = "dockerCommands.html">Docker</a></li>
             <li><a href = "apacheCommands.html">Apache</a></li>
+            <li><a href = "pylintTutorial.html">Pylint</a></li>
+            <li><a href = "OOPGlossary.html">OOP Glossary</a></li>
+            <li><a href = "AAATesting.html">AAA Testing</a></li>
+            <li><a href = "OOPPrinciples.html">OOP Principles</a></li>
+            <li><a href = "concernSeparation.html">Separation Of Concerns</a></li>
         </ul>
     </div>
     <div id="content">
